--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.12", features = ["json", "blocking"] }
+serde_derive = { version = "1.0.218" }
+serde = { version = "1.0.218" }
