--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.12", features = ["json", "blocking"] }
+serde_json = { version = "1.0.140" }
 serde_derive = { version = "1.0.218" }
 serde = { version = "1.0.218" }
